--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,20 @@
 @import url('https://fonts.googleapis.com/css2?family=Syne:wght@700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Covered+By+Your+Grace&display=swap');
 
 /* #root{
   font-family: 'Syne', sans-serif;
 } */
 
-h1{
+h1,h3{
   font-family: 'Syne', sans-serif;
 }
 p, li{
   font-family: 'Montserrat', sans-serif;
+}
+h2{
+  font-family: 'Covered By Your Grace', cursive;
+  /* color: ; */
 }
 /* .logo {
   height: 6em;
